objects/Warm_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Previous_YTD_Leads__c</fullName>
        <formula>IF( 
	(Year( Today()) -1 = Year(Lead_Date__c)) 
	&amp;&amp; (Lead_Date_YTD_Date__c &lt;= Today()), 
	1, 
	0
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous YTD Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Leads__c</fullName>
        <formula>IF(Year( Today()) -1 = Year(Lead_Date__c), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Year Leads</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Primary Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Warm Leads (Primary Program)</relationshipLabel>
        <relationshipName>Warm_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Lead_Outcome_OAB_Count__c</fullName>
        <formula>IF ( NOT( ISBLANK( Source_Interaction__c ) ) &amp;&amp; Outcome_Type__c == $Label.OutcomesProductLeadOAB, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Lead Outcome OAB Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification_Status__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Qualification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unqualified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualifying_Question__c</fullName>
        <description>Created for CR-20160122-9558.</description>
        <inlineHelpText>This will hold the response to the designated &quot;Qualifying Question&quot;.</inlineHelpText>
        <label>Qualifying Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Lead_Channel__c</fullName>
        <description>Created for CR-20150908-9227.</description>
        <label>Reporting Lead Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_to_be_contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request to be contacted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Secondary Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Warm Leads (Secondary Program)</relationshipLabel>
        <relationshipName>Warm_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Not Used: Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Warm Leads (Source Campaign)</relationshipLabel>
        <relationshipName>Warm_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The interaction which prompted this product lead.</inlineHelpText>
        <label>Source Interaction</label>
        <referenceTo>Relationship_Interaction__c</referenceTo>
        <relationshipLabel>Product Leads</relationshipLabel>
        <relationshipName>Warm_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Southwind_Lead_Type__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <inlineHelpText>Used by Southwind for lead categorization</inlineHelpText>
        <label>Southwind Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>SW Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Assoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Conf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Inst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA/AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Southwind_Program_Type__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Southwind Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP/FMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clin Tranform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Ops</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Already a Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined/No Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Bad Timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Competitor in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Contact Too Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Non-Viable Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP - Not Viable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Identified (Moved to Opportunity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - Contact Under Protocol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - Restriction Clearance Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted - Permission Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retained by Strategic Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warming - Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warming - Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Marketer Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_is_Disqualified__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Case(Status__c,
&quot;Pending&quot;, 1,
&quot;Bad Timing&quot;, 1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status is Disqualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_is_Moved_to_Opportunity__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Opportunity Identified (Moved to Opportunity)&quot;), 1, 0)</formula>
        <label>Status is Moved to Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_is_Pending__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Pending&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status is Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_of_Related_Opportunity__c</fullName>
        <description>Auto-populated with highest selected Stage from the list, based on all related Opps: Closed Won
Closed Lost
Active in FT
Active in ST
Initial Visit Sch&apos;d
Outreach
Prospect
Otherwise displays Stage of most recently modified related Opp</description>
        <label>Status of Related Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Sub Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Outreach_Warm_Lead__c</fullName>
        <description>Sum of the &quot;Total_Outreach_Opp__c&quot; field values from related, unique Opportunities, calculated via code using &quot;Total_Outreach_WLMtM__c&quot; field.</description>
        <label>Total Outreach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PAs_Warm_Lead__c</fullName>
        <description>Sum of the &quot;Total PAs&quot; field values from related, unique Opportunities, cacluated via code using &quot;Total_PAs_WLMtM__c&quot; field.</description>
        <label>Total PAs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Visits_Warm_Lead__c</fullName>
        <description>Sum of the &quot;Total Visits&quot; field values from related, unique Opportunities, calculated via code using the &quot;Total_Visists_WLMtM__c&quot; field.</description>
        <label>Total Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>&quot;Total&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF(
	ISPICKVAL(Lead_Origin__c, &quot;OAB&quot;),
	&quot;In-Network Lead&quot;,
	CASE( 
		Lead_Channel__c ,
		&quot;Ineligible Order&quot;, &quot;Inbound Inquiries&quot;, 
		&quot;Webinar&quot;, &quot;Prospect Event&quot;, 
		&quot;Prospect Meeting&quot;, &quot;Prospect Event&quot;, 
		&quot;Breakout&quot;, &quot;Prospect Event&quot;, 
		&quot;Advisory.com&quot;, &quot;Inbound Inquiries&quot;, 
		&quot;Cross-merchandising&quot;, &quot;Cross-merchandising&quot;, 
		&quot;Email/Voicemail Inquiry&quot;, &quot;Inbound Inquiries&quot;, 
		&quot;External Advertising&quot;, &quot;Out of Network Lead&quot;, 
		&quot;HTML Campaign&quot;, &quot;Out of Network Lead&quot;, 
		&quot;Member Referral&quot;, &quot;Out of Network Lead&quot;, 
		&quot;OAB Referral&quot;, &quot;Out of Network Lead&quot;, 
		&quot;PR/Media Campaign&quot;, &quot;Out of Network Lead&quot;, 
		&quot;Tradeshow Booth&quot;, &quot;Prospect Event&quot;, 
		&quot;Speaking Engagement&quot;, &quot;Prospect Event&quot;, 
		&quot;Associations&quot;, &quot;Prospect Event&quot;, 
		&quot;OAB Alumni&quot;, &quot;Out of Network Lead&quot;, 
		&quot;OAB&quot;, &quot;In-Network Lead&quot;, 
		&quot;Microsite&quot;, &quot;Out of Network Lead&quot;, 
		&quot;&quot;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Upsell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Counter__c</fullName>
        <formula>IF(Ever_Visited__c = &apos;Yes&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Goal__c</fullName>
        <label>Visit Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visited__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>If( ISNULL( Initial_Visit_Date__c), &quot;Not Visited&quot;, &quot;Visited&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warm_Lead_Count__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF(  $RecordType.Name = &quot;GOAL&quot;, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warm Lead Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2010_OAB_NBB__c</fullName>
        <label>2010 OAB NBB</label>
        <summarizedField>OAB_Lead_Passer__c.OAB_NBB_Credit__c</summarizedField>
        <summaryFilterItems>
            <field>OAB_Lead_Passer__c.Lead_Credit_Year__c</field>
            <operation>equals</operation>
            <value>2010</value>
        </summaryFilterItems>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2010_OAB_Units__c</fullName>
        <label>2010 OAB Units</label>
        <summarizedField>OAB_Lead_Passer__c.OAB_Unit_Credit__c</summarizedField>
        <summaryFilterItems>
            <field>OAB_Lead_Passer__c.Lead_Credit_Year__c</field>
            <operation>equals</operation>
            <value>2010</value>
        </summaryFilterItems>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YTD_OAB_NBB_Units__c</fullName>
        <label>YTD OAB NBB Units</label>
        <summarizedField>OAB_Lead_Passer__c.YTD_OAB_Units__c</summarizedField>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YTD_OAB_NBB__c</fullName>
        <label>YTD OAB NBB</label>
        <summarizedField>OAB_Lead_Passer__c.YTD_OAB_NBB__c</summarizedField>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YTD_Visit__c</fullName>
        <formula>IF(  
	((Month( Initial_Visit_Date__c ) &lt; Month( Today()))
		|| (Month( Initial_Visit_Date__c ) = Month( Today())
				&amp;&amp; (DAY(Initial_Visit_Date__c) &lt;= Day( Today()))
			)
	),
	&quot;Yes&quot;, 
	&quot;No&quot;
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Visit?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advisory_com_logged_in_status__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>advisory.com logged in status</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>advisory_com_object_type__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>advisory.com object type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Participants__c</fullName>
        <label># of Participants</label>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Warm Lead</label>
    <listViews>
        <fullName>ABI_Warm_Leads_to_Process</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_level__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Account__c</columns>
        <columns>Lead_Date__c</columns>
        <columns>Lead_Channel__c</columns>
        <columns>Lead_Origin__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <columns>Primary_Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>EEI</value>
        </filters>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>PEI</value>
        </filters>
        <label>Pope Warm Leads</label>
    </listViews>
    <listViews>
        <fullName>ABI_pending_leads</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>Contact_level__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Account__c</columns>
        <columns>Lead_Date__c</columns>
        <columns>Lead_Channel__c</columns>
        <columns>Lead_Origin__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Program__c</field>
            <operation>startsWith</operation>
            <value>CIH,ALDI,BISMI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>ABI pending leads</label>
    </listViews>
    <listViews>
        <fullName>ABI_retained_leads</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>Contact_level__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Account__c</columns>
        <columns>Lead_Date__c</columns>
        <columns>Lead_Channel__c</columns>
        <columns>Lead_Origin__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Program__c</field>
            <operation>startsWith</operation>
            <value>CIH,ALDI,BISMI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Retained by Strategic Marketing</value>
        </filters>
        <label>ABI retained leads</label>
    </listViews>
    <listViews>
        <fullName>AB_s_warm_leads</fullName>
        <columns>Status__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Campaign__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>contains</operation>
            <value>CR_Q315_Content Give_The Accessible CV Network</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Warm_Lead__c.Standard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Retained</value>
        </filters>
        <label>AB&apos;s warm leads</label>
    </listViews>
    <listViews>
        <fullName>Adrienne_Olson_Leads</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Initial_Visit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketer_Assignment__c</field>
            <operation>equals</operation>
            <value>Adrienne Olson</value>
        </filters>
        <filters>
            <field>Lead_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <label>Adrienne Olson Leads</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Lead_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Associate_Assignment__c</field>
            <operation>equals</operation>
            <value>Julia Simon</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>JS Survey WL</label>
    </listViews>
    <listViews>
        <fullName>All3</fullName>
        <columns>Lead_Date__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Olivia Davis</label>
    </listViews>
    <listViews>
        <fullName>All_Sarah_Ernst</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Lead_Date__c</columns>
        <columns>Lead_Channel__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Associate_Assignment__c</field>
            <operation>equals</operation>
            <value>Sarah Ernst</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Warm_Lead__c.Standard</value>
        </filters>
        <label>All (Sarah Ernst)</label>
    </listViews>
    <listViews>
        <fullName>Andrew_Herbst_Warm_Leads_Pending</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Grade__c</columns>
        <columns>Request_to_be_contacted__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Associate_Assignment__c</field>
            <operation>equals</operation>
            <value>Andrea Herbst</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Andrew Herbst Warm Leads - Pending</label>
    </listViews>
    <listViews>
        <fullName>Audience_Rx_Leads</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Status_of_Related_Opportunity__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>BICO</value>
        </filters>
        <label>Audience Rx Leads</label>
    </listViews>
    <listViews>
        <fullName>Audience_Rx_Leads1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Status_of_Related_Opportunity__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Marketing_Associate_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>BICO</value>
        </filters>
        <label>Audience Rx Leads</label>
    </listViews>
    <listViews>
        <fullName>BENNETT_HALE</fullName>
        <columns>Lead_Date__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Program__c</columns>
        <columns>Lead_Channel__c</columns>
        <columns>Campaign__c</columns>
        <columns>Grade__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Ever_Visited__c</columns>
        <columns>Initial_Visit_Date__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>Days_To_Follow_Up__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketer_Assignment__c</field>
            <operation>contains</operation>
            <value>Bennett</value>
        </filters>
        <filters>
            <field>Grade__c</field>
            <operation>lessOrEqual</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Lead_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:3,THIS_MONTH</value>
        </filters>
        <label>BENNETT/HALE PENDING WARM LEADS</label>
    </listViews>
    <listViews>
        <fullName>BERSANI_MELO</fullName>
        <columns>Lead_Date__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Program__c</columns>
        <columns>Lead_Channel__c</columns>
        <columns>Campaign__c</columns>
        <columns>Grade__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Ever_Visited__c</columns>
        <columns>Initial_Visit_Date__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Marketer_Assignment__c</columns>
        <columns>Days_To_Follow_Up__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketer_Assignment__c</field>
            <operation>equals</operation>
            <value>Juliana Bersani</value>
        </filters>
        <filters>
            <field>Lead_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:3,THIS_MONTH</value>
        </filters>
        <filters>
            <field>Grade__c</field>
            <operation>lessOrEqual</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>BERSANI/MELO PENDING WARM LEADS</label>
    </listViews>
</CustomObject>